{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 251,
  "lineage": "dbeba26d-e01a-e4a1-7f4c-871d61558217",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0faab6bdbac9486fb",
            "arn": "arn:aws:ec2:eu-central-1:459969247641:instance/i-0a9fca1bc3032e6db",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-profile",
            "id": "i-0a9fca1bc3032e6db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0eb54161237a53444"
              }
            ],
            "primary_network_interface_id": "eni-0eb54161237a53444",
            "private_dns": "ip-10-0-1-167.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.167",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a74e4697d27afc4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ca4c159931efaac6",
            "tags": {
              "Name": "bastion-private-ssm"
            },
            "tags_all": {
              "Name": "bastion-private-ssm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b04b1a6f85d0170"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "i-0a9fca1bc3032e6db",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_ssm_role",
            "module.security_groups.aws_security_group.bastion_sg",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:security-group/sg-02285a137ed11268c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02285a137ed11268c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b04b1a6f85d0170"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres-sg",
            "name_prefix": "",
            "owner_id": "459969247641",
            "region": "eu-central-1",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007040c763d566028"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "sg-02285a137ed11268c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:security-group/sg-04b04b1a6f85d0170",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b04b1a6f85d0170",
            "ingress": [
              {
                "cidr_blocks": [
                  "223.190.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "459969247641",
            "region": "eu-central-1",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007040c763d566028"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "sg-04b04b1a6f85d0170",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2446872712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-central-1",
            "security_group_id": "sg-04b04b1a6f85d0170",
            "security_group_rule_id": "sgr-018a4678d463e4b9d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-353011691",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "eu-central-1",
            "security_group_id": "sg-02285a137ed11268c",
            "security_group_rule_id": "sgr-01b63e692173c13e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.aurora",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "postgres_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-2558298371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-02285a137ed11268c",
            "security_group_rule_id": "sgr-05716b6d9214d7018",
            "self": false,
            "source_security_group_id": "sg-04b04b1a6f85d0170",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.aurora",
            "module.security_groups.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "postgres_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-2515499898",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-02285a137ed11268c",
            "security_group_rule_id": "sgr-08cc2a449c8a61251",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.aurora",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "223.190.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-625812117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-04b04b1a6f85d0170",
            "security_group_rule_id": "sgr-0929a964ef33b0d53",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:subnet/subnet-0ca4c159931efaac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca4c159931efaac6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459969247641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "vpc_id": "vpc-007040c763d566028"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "subnet-0ca4c159931efaac6",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:subnet/subnet-0e3d1d751860d6196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3d1d751860d6196",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459969247641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "vpc_id": "vpc-007040c763d566028"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "subnet-0e3d1d751860d6196",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:vpc/vpc-007040c763d566028",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f57a906a67b925f9",
            "default_route_table_id": "rtb-018b3daac12a0280f",
            "default_security_group_id": "sg-054a18ec37c81f18d",
            "dhcp_options_id": "dopt-0fc637242c8048a6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007040c763d566028",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018b3daac12a0280f",
            "owner_id": "459969247641",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "vpc-007040c763d566028",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:security-group/sg-0aee4cbc1c916454e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0aee4cbc1c916454e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "459969247641",
            "region": "eu-central-1",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007040c763d566028"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "sg-0aee4cbc1c916454e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:vpc-endpoint/vpce-0eed4524df2a763aa",
            "dns_entry": [
              {
                "dns_name": "vpce-0eed4524df2a763aa-vkml1ygp.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0eed4524df2a763aa-vkml1ygp-eu-central-1b.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0eed4524df2a763aa-vkml1ygp-eu-central-1a.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2messages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z09333992TJA4J0GZB84B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0eed4524df2a763aa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-068e1f8d3b05e0fdb",
              "eni-0e1580c5bd6c8f807"
            ],
            "owner_id": "459969247641",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-central-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aee4cbc1c916454e"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2messages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.138",
                "subnet_id": "subnet-0ca4c159931efaac6"
              },
              {
                "ipv4": "10.0.2.213",
                "subnet_id": "subnet-0e3d1d751860d6196"
              }
            ],
            "subnet_ids": [
              "subnet-0ca4c159931efaac6",
              "subnet-0e3d1d751860d6196"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-007040c763d566028"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "vpce-0eed4524df2a763aa",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_vpc.main",
            "module.vpc_endpoints.aws_security_group.vpc_endpoints_sg",
            "module.vpc_endpoints.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:vpc-endpoint/vpce-0f377dbbbb8f22c46",
            "dns_entry": [
              {
                "dns_name": "vpce-0f377dbbbb8f22c46-mlpuodrq.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0f377dbbbb8f22c46-mlpuodrq-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0f377dbbbb8f22c46-mlpuodrq-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z067469132XUTS20ZWS4Q"
              },
              {
                "dns_name": "ssm.eu-central-1.api.aws",
                "hosted_zone_id": "Z06835071CQ143LKV5VTW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f377dbbbb8f22c46",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-090c4959eeea9572f",
              "eni-0c75929f2b90e8169"
            ],
            "owner_id": "459969247641",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-central-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aee4cbc1c916454e"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.42",
                "subnet_id": "subnet-0ca4c159931efaac6"
              },
              {
                "ipv4": "10.0.2.4",
                "subnet_id": "subnet-0e3d1d751860d6196"
              }
            ],
            "subnet_ids": [
              "subnet-0ca4c159931efaac6",
              "subnet-0e3d1d751860d6196"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-007040c763d566028"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "vpce-0f377dbbbb8f22c46",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_vpc.main",
            "module.vpc_endpoints.aws_security_group.vpc_endpoints_sg",
            "module.vpc_endpoints.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:459969247641:vpc-endpoint/vpce-0fc23d4188d447040",
            "dns_entry": [
              {
                "dns_name": "vpce-0fc23d4188d447040-sb90s3r5.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0fc23d4188d447040-sb90s3r5-eu-central-1b.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0fc23d4188d447040-sb90s3r5-eu-central-1a.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0682784UOTZYNBEN2CT"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.api.aws",
                "hosted_zone_id": "Z093142765L5WIZJOKU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fc23d4188d447040",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-028e3361c95e32b48",
              "eni-0b02f84a8220b84c4"
            ],
            "owner_id": "459969247641",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "eu-central-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aee4cbc1c916454e"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssmmessages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.239",
                "subnet_id": "subnet-0ca4c159931efaac6"
              },
              {
                "ipv4": "10.0.2.83",
                "subnet_id": "subnet-0e3d1d751860d6196"
              }
            ],
            "subnet_ids": [
              "subnet-0ca4c159931efaac6",
              "subnet-0e3d1d751860d6196"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-007040c763d566028"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459969247641",
            "id": "vpce-0fc23d4188d447040",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_vpc.main",
            "module.vpc_endpoints.aws_security_group.vpc_endpoints_sg",
            "module.vpc_endpoints.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}